  to be a value instead of an array [Harrie]
* NewNode() is not called on a module instance if the method doesn't exist
  this makes ATK less likely to throw a PHP error
  when the module is flawed. [Boy]
* Debug console now works in frame environment, each frame can be debugged 
  separately. (bug #532) [Ivo]
* Fixed wrong menu delimiter for menu spacers. (bug #574) [Przemek]
* Updated Norwegian translation. [Olav]
* Updated Brazilian Portuguese translation. [Elton]

Changes in ATK 5.3RC1
---------------------
+ Added support for the atkMetaNode to the Oracle (OCI) driver. [Peter]
+ Added support for default values to the atkMetaNode (only numerics and
  strings at this time and only on PostgreSQL and Oracle). [Peter]
+ Added relation support to the atkMetaPolicy (supports one-to-one,
  one-to-many and many-to-one relations). [Peter]
+ Added get/setDescriptorTemplate methods to atkNode and atkRelation. [Peter]
+ Added get/setDestinationFilter methods to atkRelation. [Peter]
+ Added getInstance() for the atkMlSplitter class. [Martin]
+ Added nodeExists method to atkModule. At this time only used by
  atkMetaPolicy relation support. [Peter]
+ Added atkMetaTools class which contains methods to singularize or pluralize
  English strings (e.g. dogs => dog, dog => dogs etc.). [Peter]
+ Added AF_ONETOMANY_EMBED, this causes the add to be embedded in the current
  node, instead of displaying it on a seperate screen. [Boy]
+ Added $config_javascript_confirmation, setting this to true will make ATK
  use javascript for the confirmation dialogue when deleting. [Boy]
+ Added NF_CACHE_RECORDLIST which makes ATK cache all the recordlists. [Boy]
+ Added $format parameter to func_datetochar. [Ivo]
+ Added vendorDateFormat method to abstraction layer for database specific
  date formatting strings. [Ivo]
+ Added atkLiveTextPreview attribute to preview html content of atkAttributes
  and atkTextAttributes in realtime. [Ivo]